examples/test/testpolicy6845.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6845
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key15: value11
      key39: value4
      key34: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value20
          key9: value27
      podSelector:
        matchLabels:
          key44: value41
          key5: value0
